# OCR-Project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
assets/: generated_word_search.solution.json
src/ocr_project/: __init__.py  cli.py  ocr.py  pipeline.py  preprocessing.py  solver.py  visualization.py
tests/: test_solver.py
