[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-word-search-solver"
version = "0.1.0"
description = "Python OCR word-search solver inspired by Projet_OCR."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Vanshika Kanwar" }
]
dependencies = [
  "easyocr>=1.7.1",
  "numpy>=1.26",
  "opencv-python>=4.10",
  "Pillow>=10.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
